k8s/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: go-app-deploy
  namespace: go-survey
  labels:
    app: go-app
spec:
  selector:
    matchLabels:
      app: go-app
  replicas: 2
  template:
    metadata:
      labels:
        app: go-app
    spec:
      containers:
        - name: go-app
          image: mveyone/blog-app:latest
          ports:
            - containerPort: 3000
        - name: mongo-app
          image: mongo:latest
          ports:
            - containerPort: 27017
