k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: go-app-ingress
  namespace: go-survey
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
    - host: goapp.johnydev.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: go-app
                port:
                  number: 3000
